Update Code for new Animation Class