@@ -39,9 +39,9 @@ public class GameView {
   
   public GameView() {
     UIManager.put("ScrollBar.thumbShadow", Color.WHITE);
-    UIManager.put("ScrollBar.background" ,Color.WHITE);
-    UIManager.put("ScrollBar.foreground" ,Color.WHITE);
-    UIManager.put("ScrollBar.width" ,new Integer(15));
+    UIManager.put("ScrollBar.background", Color.WHITE);
+    UIManager.put("ScrollBar.foreground", Color.WHITE);
+    UIManager.put("ScrollBar.width", Integer.valueOf(15));
     createMainFrame();
   }
   
